made index responsive

--- a/index.html
+++ b/index.html
@@ -47,12 +47,12 @@
   </div>
   <div class="container">
     <div class="row">
-      <div class="col-6">
-        <img src="images/yoga.png" />
+      <div class="col-sm-6">
+        <img src="images/yoga.png" class="img-fluid d-none d-sm-block"/>
       </div>
-      <div class="col-6">
-        <h2 class="mb-3 text-start">Yoga app</h2>
-        <p class="text-start">
+      <div class="col-sm-6">
+        <h2 class="mb-3">Yoga app</h2>
+        <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
           quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
           eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -63,10 +63,10 @@
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-6">
-        <h2 class="text-start">Weather app</h2>
-        <p class="mb-3 text-start">
+    <div class="row mt-5">
+      <div class="col-sm-6">
+        <h2>Weather app</h2>
+        <p class="mb-3">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
           quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
           eos eveniet alias temporibus deserunt veritatis minima fugiat
@@ -76,17 +76,17 @@
           <a href="#" class="app-link">Launch Yoga App</a>
         </div>
       </div>
-      <div class="col-6">
-        <img src="images/weather.png" />
+      <div class="col-sm-6">
+        <img src="images/weather.png" class="img-fluid d-none d-sm-block"/>
       </div>
     </div>
-    <div class="row">
-      <div class="col-6">
-        <img src="images/yogurt.png" />
+    <div class="row mt-5">
+      <div class="col-sm-6">
+        <img src="images/yogurt.png" class="img-fluid d-none d-sm-block"/>
       </div>
-      <div class="col-6">
-        <h2 class="mb-3 text-start">Yogurt app</h2>
-        <p class="text-start">
+      <div class="col-sm-6">
+        <h2 class="mb-3">Yogurt app</h2>
+        <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis
           quia, dignissimos nam ratione veniam quibusdam porro omnis quam vel
           eos eveniet alias temporibus deserunt veritatis minima fugiat
