update index navbar SEO/ update contact navbar

--- a/index.html
+++ b/index.html
@@ -26,21 +26,21 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/" title="Homepage">Homepage</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">About Me</a>
+            <a class="nav-link" href="about.html" title="About Zanah">About Me</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html#contact">Contact Me</a>
+            <a class="nav-link" href="about.html#contact" title="Contact Zanah">Contact Me</a>
           </li>
         </ul>
       </div>
     </div>
   </nav>
-  <h2>👋 Hi I am</h2>
-  <h1>Zanah Paret</h1>
-  <h3>🇺🇸 Front-end developer, based in South Florida</h3>
+  <h2 class="text-center">👋 Hi I am</h2>
+  <h1 class="text-center">Zanah Paret</h1>
+  <h3 class="text-center">🇺🇸 Front-end developer, based in South Florida</h3>
   <div class="navigation-links">
     <a href="about.html#contact" class="contact-link">Contact me</a>
     <a href="about.html" class="about-link">About me</a>
