--- a/about.html
+++ b/about.html
@@ -16,19 +16,25 @@
 </head>
 
 <body>
-  <nav class="navbar navbar-expand fixed-top navbar-light bg-light">
-    <div class="container">
-      <a class="navbar-brand" href="#">Zanah Paret</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
-        aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+  <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/">Zanah Paret</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-link" aria-current="page" href="index.html">Home</a>
-          <a class="nav-link active" href="#">About Me</a>
-          <a class="nav-link" href="about.html#contact">Contact Me</a>
-        </div>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="/" title="Homepage">Homepage</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" href="about.html" title="About Zanah">About Me</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html#contact" title="Contact Zanah">Contact Me</a>
+          </li>
+        </ul>
       </div>
     </div>
   </nav>
