updated index & about images SEO

--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container-fluid">
+    <div class="container">
       <a class="navbar-brand" href="/">Zanah Paret</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,7 +38,7 @@
       </div>
     </div>
   </nav>
-  <h1>About me</h1>
+  <h1 class="text-center">About me</h1>
   <h3>Front-end developer from Fort Lauderdale, USA</h3>
   <div class="about-paragraphs">
     <p class="paragraph text-center">
@@ -52,13 +52,13 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-4">
-        <img src="images/yoga.png" class="image-fluid p-2 shadow rounded" />
+        <img src="images/yoga.png" alt="Yoga project" class="image-fluid p-2 shadow rounded" />
       </div>
       <div class="col-sm-4">
-        <img src="images/weather.png" class="image-fluid p-2 shadow rounded" />
+        <img src="images/weather.png" alt="Weather project" class="image-fluid p-2 shadow rounded" />
       </div>
       <div class="col-sm-4">
-        <img src="images/yogurt.png" class="image-fluid p-2 shadow rounded" />
+        <img src="images/yogurt.png" alt="Yogurt project" class="image-fluid p-2 shadow rounded" />
       </div>
     </div>
   </div>
