--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
-    <div class="container-fluid">
+    <div class="container">
       <a class="navbar-brand" href="/">Zanah Paret</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,7 +48,7 @@
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
-        <img src="images/yoga.png" class="img-fluid d-none d-sm-block"/>
+        <img src="images/yoga.png" alt="Yoga project" class="img-fluid d-none d-sm-block"/>
       </div>
       <div class="col-sm-6">
         <h2 class="mb-3">Yoga app</h2>
@@ -77,12 +77,12 @@
         </div>
       </div>
       <div class="col-sm-6">
-        <img src="images/weather.png" class="img-fluid d-none d-sm-block"/>
+        <img src="images/weather.png" alt="Weather project" class="img-fluid d-none d-sm-block"/>
       </div>
     </div>
     <div class="row mt-5">
       <div class="col-sm-6">
-        <img src="images/yogurt.png" class="img-fluid d-none d-sm-block"/>
+        <img src="images/yogurt.png" alt="Yogurt project" class="img-fluid d-none d-sm-block"/>
       </div>
       <div class="col-sm-6">
         <h2 class="mb-3">Yogurt app</h2>
